# red

./: .env.example  .gitignore  .~lock.FA8612-21-S-C001_compliance_matrix.csv#  BUILD.md  CLAUDE.md  CONNECTION_POOLING_IN_PROGRESS.md  DARK_MODE_TAG_FIX.md  DB_OPTIMIZATION_COMPLETE.md  DIRECTORY-SHREDDING-FIX.md  EFFICIENCY_PHASE_7_8_COMPLETE.md  FA8732-25-R-0001_compliance_matrix.csv  GZIP_COMPRESSION_COMPLETE.md  MCP_AGENTS_IMPLEMENTATION_PLAN.md  MEMOIZE.md  MODULAR_SERVER_FIX_COMPLETE.md  NAVIGATION_FIX.md  OLLAMA_AGENTS_AND_SKILLS.md  OPTIMAL_RAG_IMPLEMENTATION_PLAN.md  OPTIMIZATION_REVIEW.md  PHASE3_VISUALIZATION_ACCESS.md  PLANNING.md  RAG_IMPLEMENTATION_PLAN.md  README.md  RED-CONTEXT-ENGINEERING-PROMPT.md  REQUEST_VALIDATION_COMPLETE.md  RFI_fight_tonight.docx  SERVER_REFACTORING.md  SHREDDING-TOOLS-FIX.md  SUPERIOR_RAG_IMPLEMENTATION_PLAN.md  SVG_CALENDAR_DOCUMENTATION.md  SVG_CALENDAR_QUICKSTART.md  TASK.md  TECH_DEBT.md  TECH_DEBT_SESSION_2_SUMMARY.md  TECH_DEBT_SESSION_SUMMARY.md  UI_DISPLAY_FIXES.md  agent_api.py  agent_mention_autocomplete.js  app.js  app.py  (+76 more)
agent_system/: __init__.py  agents_config.json  ollama_agent_runtime.py  shredding_tools.py  web_tools.py
career_monster/: __init__.py  alignment_scorer.py  data_models.py  database.py  narrative_generator.py
config/: categories.json  database.py  model_config.py  tracking_task_templates.json
db_migrations/: 001_add_indexes_and_triggers.sql  apply_migration.py
docs/: CAG_DYNAMIC_CAPACITY.md  DIRECTORY_STRUCTURE.md  ORGANIZATION_REFACTOR.md  TODO_LIST_IMPLEMENTATION_PLAN.md  TODO_PHASE2_STATUS.md  (+4 more)
(+279 files in other folders)
