[project]
name = "red"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "docling>=2.51.0",
    "ollama>=0.5.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "python-docx>=1.2.0",
    "redis>=6.4.0",
    "sentence-transformers>=5.1.0",
]
