[project]
name = "red"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "docling>=2.51.0",
    "duckdb>=1.3.2",
    "kuzu>=0.11.2",
    "numpy>=2.3.2",
    "ollama>=0.5.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "psutil>=7.0.0",
    "python-docx>=1.2.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.0",
    "tiktoken>=0.12.0",
]
